Caso base: No existencia de MO.jar
Se implemento la resolucion a la no existencia del jar del MO